# self_update

./: Cargo.toml
src/: main.rs
